fiddled with readme

--- a/notebooks/pYPKp7.ipynb
+++ b/notebooks/pYPKp7.ipynb
@@ -49,6 +49,23 @@
      "outputs_hidden": false
     }
    },
+   "outputs": [],
+   "source": [
+    "f,r =parse('''>866_pYPKpwF (79-mer)\n",
+    "              GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
+    "              >865_pYPKpwR (79-mer)\n",
+    "              GCATGACGTCaccagacgctatgactcacccggacggca''', ds=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -56,17 +73,12 @@
        "cSEGUID_w8zCE05nnVaKMSe-K0q29kjVt4k"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f,r =parse('''>866_pYPKpwF (79-mer)\n",
-    "              GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
-    "              >865_pYPKpwR (79-mer)\n",
-    "              GCATGACGTCaccagacgctatgactcacccggacggca''', ds=False)\n",
-    "\n",
     "seq = pcr(f, r, pYPK7)\n",
     "\n",
     "seq = seq.looped()\n",
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -104,31 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Bio.Restriction import ZraI, FspAI, EcoRV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dseqrecord(-6180)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pYPKp7.linearize(ZraI)"
    ]
   },
   {
@@ -148,35 +140,27 @@
     }
    ],
    "source": [
-    "pYPKp7.linearize(FspAI)"
+    "pYPKp7.linearize(ZraI)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'reloaded' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-a89bc151b297>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpydna\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpYPKp7\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pYPKp7.gb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mpYPKp7\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcseguid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreloaded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefinition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'reloaded' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Dseqrecord(-6180)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pydna.all import *\n",
-    "pYPKp7=read(\"pYPKp7.gb\")\n",
-    "assert pYPKp7.cseguid() in reloaded.definition"
+    "pYPKp7.linearize(FspAI)"
    ]
   }
  ],
@@ -196,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
