--- a/notebooks/pMEC1030.ipynb
+++ b/notebooks/pMEC1030.ipynb
@@ -40,7 +40,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1e8dfe2fd0>"
+       "<IPython.lib.display.IFrame at 0x7f810c180a30>"
       ]
      },
      "execution_count": 1,
