--- a/notebooks/pMEC1042.ipynb
+++ b/notebooks/pMEC1042.ipynb
@@ -69,7 +69,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7ff57fe84040>"
+       "<IPython.lib.display.IFrame at 0x7f5e65e5a7f0>"
       ]
      },
      "execution_count": 3,
