--- a/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
+++ b/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe1301091f0>"
+       "<IPython.lib.display.IFrame at 0x7f93e04b02b0>"
       ]
      },
      "execution_count": 6,
