--- a/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
+++ b/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa8bda041f0>"
+       "<IPython.lib.display.IFrame at 0x7fe5844a70a0>"
       ]
      },
      "execution_count": 6,
