--- a/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
+++ b/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
@@ -102,7 +102,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f030d67e370>"
+       "<IPython.lib.display.IFrame at 0x7f5fde30d070>"
       ]
      },
      "execution_count": 6,
