--- a/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
+++ b/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f37c632c430>"
+       "<IPython.lib.display.IFrame at 0x7f71e7f557f0>"
       ]
      },
      "execution_count": 6,
