--- a/notebooks/p426TDH3_HIS3.ipynb
+++ b/notebooks/p426TDH3_HIS3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -41,10 +41,10 @@
        "<a href='./Mumberg/p426GPD.gb' target='_blank'>./Mumberg/p426GPD.gb</a><br>"
       ],
       "text/plain": [
-       "File(<unknown id>)(o6606)"
+       "File(p426GPD)(o6606)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -120,12 +120,12 @@
    },
    "outputs": [],
    "source": [
-    "asm =Assembly((p426TDH3_lin, HIS3_prod))"
+    "asm = Assembly((p426TDH3_lin, HIS3_prod))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -143,7 +143,7 @@
        "algorithm..: common_sub_strings"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -165,18 +165,18 @@
     {
      "data": {
       "text/plain": [
-       " -|name_lin|33\n",
-       "|           \\/\n",
-       "|           /\\\n",
-       "|           33|735bp_PCR_prod|38\n",
-       "|                             \\/\n",
-       "|                             /\\\n",
-       "|                             38-\n",
-       "|                                |\n",
-       " --------------------------------"
+       " -|p426GPD_lin|33\n",
+       "|              \\/\n",
+       "|              /\\\n",
+       "|              33|735bp_PCR_prod|38\n",
+       "|                                \\/\n",
+       "|                                /\\\n",
+       "|                                38-\n",
+       "|                                   |\n",
+       " -----------------------------------"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "jupyter": {
