--- a/notebooks/p426TEF1_HIS3.ipynb
+++ b/notebooks/p426TEF1_HIS3.ipynb
@@ -46,7 +46,7 @@
        "<a href='./Mumberg/p426TEF.gb' target='_blank'>./Mumberg/p426TEF.gb</a><br>"
       ],
       "text/plain": [
-       "File(<unknown id>_rc)(o6352)"
+       "File(p426TEF)(o6352)"
       ]
      },
      "execution_count": 3,
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       " -|name_rc_lin|33\n",
+       " -|p426TEF_lin|33\n",
        "|              \\/\n",
        "|              /\\\n",
        "|              33|735bp_PCR_prod|38\n",
